[TECH] async fix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
 ]
 
 [project.scripts]
-notia = "main:main"
+notia = "main:cli"
 
 [build-system]
 requires = ["setuptools>=61.0"]
