--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "openai-agents>=0.2.4",
     "chromadb>=0.4.24",
+    "rich>=13.7.1",
 ]
 
 [project.scripts]
