--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "openai-agents>=0.2.4",
     "chromadb>=0.4.24",
     "rich>=13.7.1",
+    "httpx>=0.27.0",
 ]
 
 [project.scripts]
