--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "chromadb>=0.4.24",
     "rich>=13.7.1",
     "httpx>=0.27.0",
+    "python-dotenv>=1.0.1",
 ]
 
 [project.scripts]
