--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,12 @@ description = "An application to manage notes and tasks with AI assistance."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "openai-agents>=0.2.4",
-    "chromadb>=0.4.24",
-    "rich>=13.7.1",
-    "httpx>=0.27.0",
-    "python-dotenv>=1.0.1",
+    "openai-agents==0.2.4",
+    "chromadb==1.0.15",
+    "rich==14.1.0",
+    "httpx===0.28.1",
+    "python-dotenv==1.1.1",
+    "prompt-toolkit==3.0.51"
 ]
 
 [project.scripts]
