--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "rich==14.1.0",
     "httpx===0.28.1",
     "python-dotenv==1.1.1",
-    "prompt-toolkit==3.0.51"
+    "prompt-toolkit==3.0.51",
+    "maturin>=1.9.4",
 ]
 
 [project.scripts]
