--- a/rust_analyzer/Cargo.toml
+++ b/rust_analyzer/Cargo.toml
@@ -8,6 +8,7 @@ name = "notia_analyzer"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.21.2", features = ["extension-module"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+pyo3 = { version = "0.25.1", features = ["extension-module"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
+regex = "1.11.2"
