--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "python-dotenv==1.1.1",
     "prompt-toolkit==3.0.51",
     "maturin>=1.9.4",
+    "streamlit>=1.50.0",
 ]
 
 [project.scripts]
